--- a/beauty-spa.css
+++ b/beauty-spa.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    12/04/2024
+Last change:    04/06/2024
 Author:   creativemaze
 Primary use:    Beauty Spa
 -------------------------------------------------------------------*/
@@ -671,16 +671,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	transition: 0.5s;
 }
 
-.icon_pic span.icon-65{
-	font-size: 65px;
-	font-weight: 100;
+.icon_pic .fi{
+	font-size: 48px;
+	width: 80px;
+	height: 80px;
 	background-color: #f64f59;
 	color: #ffffff;
 	display: inline-block;
-	margin-top: -25px;
 	text-align: center;
-	padding: 9px;
-	transition: ease-in-out 0.5s;
+	padding: 12px;
+	margin-top: -25px;
 }
 
 .spa_icon_box h3{
@@ -807,16 +807,17 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #111111;
 	letter-spacing: 1px;
 	text-align: left;
+	padding: 6px 0;
 }
 
 .info_list > ul > li::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e941";
-	font-weight: 300;
-	font-size: 30px;
+	font-family: 'uicons-thin-straight';
+	content: "\fc0a";
+	font-weight: 100;
+	font-size: 26px;
 	position: relative;
-	top: 10px;
-	padding-right: 8px;
+	top: 8px;
+	padding-right: 10px;
 	color: #f64f59;
 }
 
@@ -847,33 +848,36 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .border_col{
 	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	flex: 33.33%;
+	width: 33.33%;
 	max-width: 220px;
+	height: 80px;
 }
 
 .first_border{
 	background-color: #111111;
-	padding: 14px 0;
+	padding: 12px 0;
 	overflow: hidden;
 }
 
 .second_border{
 	background-color: #f64f59;
-	padding: 14px 0;
+	padding: 12px 0;
 	overflow: hidden;
 }
 
 .third_border{
 	background-color: #ffffff;
-	padding: 14px 0;
+	padding: 12px 0;
 	overflow: hidden;
 }
 
 .border_box{
 	max-width: 220px;
-	padding: 14px 10px;
-	min-height: 65px;
-	height: 100%;
+	padding: 12px 10px;
 	text-align: center;
+	height: 80px;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -1094,9 +1098,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	align-items: center;
 }
 
-.bg_icon span.icon-75{
-	font-size: 75px;
-	font-weight: 100;
+.bg_icon .fi{
+	font-size: 52px;
 	display: block;
 	text-align: center;
 	color: #f64f59;
@@ -1123,15 +1126,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 	text-align: left;
 	margin: 0;
+	padding: 7px 0;
 }
 
 .bg_list > ul > li::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e5ca";
-	font-weight: 300;
-	font-size: 30px;
+	font-family: 'uicons-regular-straight';
+	content: "\fb2b";
+	font-size: 20px;
 	position: relative;
-	top: 10px;
+	top: 7px;
 	padding-right: 8px;
 	color: #f64f59;
 }
@@ -1241,13 +1244,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 18px;
 	font-weight: 600;
-	display: block;
+	display: ibnline-block;
 	text-align: left;
 	color: #111111;
 	letter-spacing: 1px;
 	line-height: 1.4em;
-	margin: 0;
-	padding-top: 11px;
+	margin-top: 0;
+	padding-top: 5px;
 }
 
 .square_title p{
@@ -1318,7 +1321,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 640px;
 	padding: 20px;
 	text-align: center;
-	background-color: #ffffff;
+	background: rgba(0,0,0,0.5);
 	border-left: solid 4px #f64f59;
 }
 
@@ -1357,7 +1360,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 16px;
 	font-weight: normal;
 	display: block;
-	color: #696969;
+	color: #dddddd;
 	letter-spacing: 1px;
 	text-align: left;
 	padding: 15px;
@@ -1478,7 +1481,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex: 41.66%;
 	width: 41.66%;
 	padding: 0 20px;
-	margin-top: 40px;
+	margin-top: 35px;
 }
 
 .blog_head h2{
@@ -2117,12 +2120,18 @@ a.footer-logo img{
 	
 	.square_title{
 		width: 70%;
-		padding-left: 20px;
+		padding-left: 25px;
 	}
 }
 
 @media only screen and (max-width: 360px){
 	.header-title__main{
 		font-size: 30px;
+	}
+}
+
+@media only screen and (max-width: 320px){
+	.square_title h3{
+		font-size: 14px;
 	}
 }
