--- a/interior-design.css
+++ b/interior-design.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    15/04/2024
+Last change:    05/06/2024
 Author:    creativemaze
 Primary use:    Interior Design
 -------------------------------------------------------------------*/
@@ -102,6 +102,20 @@ ul{
 	max-width: 650px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.bg_head{
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 40px;
+	font-weight: 800;
+	display: block;
+	color: #111111;
+	line-height: 1.2em;
+	letter-spacing: 1px;
+	text-align: center;
+	max-width: 800px;
+	margin: 0 auto;
+	margin-bottom: 125px;
 }
 
 .interior_info{
@@ -349,7 +363,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	transition: 0.5s;
 }
 
-.right_info a .fas{
+.right_info .fas{
 	font-size: 16px;
 	color: #111111;
 	padding-right: 8px;
@@ -521,7 +535,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 1280px;
 	margin: 0 auto;
 	padding: 0 30px;
-	margin-bottom: calc(9em + 70px);
+	margin-bottom: calc(9em + 35px);
 	position: relative;
 	z-index: 9999;
 }
@@ -676,16 +690,17 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #111111;
 	letter-spacing: 1px;
 	text-align: left;
+	padding: 7px 0;
 }
 
 .mid_list > ul > li::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e86c";
-	font-weight: 300;
-	font-size: 30px;
+	font-family: 'uicons-thin-straight';
+	content: "\fa38";
+	font-size: 26px;
+	font-weight: 100;
 	position: relative;
 	top: 10px;
-	padding-right: 10px;
+	padding-right: 12px;
 	color: #d3959b;
 }
 
@@ -715,23 +730,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 /* --- 3.2. Interior Area Two --- */
 .interior_area_two{
-	min-height: 400px;
-	text-align: center;
-	margin-bottom: 9em;
-	padding: 6em 0;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
+	max-width: 1200px;
+	margin: 0 auto 9em;
+	padding: 0 25px;
 }
 
 .interior_group_two{
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 0 25px;
 	width: 100%;
 	display: flex; 
 	flex-wrap: wrap;
-	padding-bottom: 15px;
 }
 
 .bg_col{
@@ -746,6 +753,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	padding: 30px 20px 25px;
 	background-color: #ffffff;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
 	overflow: auto;
 	min-height: 30px;
 }
@@ -761,13 +769,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-left: 25px;
 }
 
-.bg_icon span.icon-60{
-	font-size: 60px;
-	font-weight: 100;
+.bg_icon .fi{
+	font-size: 44px;
+	width: 75px;
+	height: 75px;
 	background-color: #d3959b;
 	color: #ffffff;
-	padding: 8px;
-	margin: 0 auto;
+	display: inline-block;
+	padding: 12px;
 }
 
 .bg_content h3{
@@ -822,14 +831,19 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 /* --- 3.3. Interior Area Three --- */
 .interior_area_three{
-	max-width: 1280px;
-	margin: 0 auto 9em;
-	padding: 0 25px;
+	min-height: 400px;
+	padding: 8em 0;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 .interior_group_three{
+	max-width: 1280px;
+	margin: 0 auto;
+	padding: 0 25px;
 	width: 100%;
-	display: flex;
+	display: flex; 
 	flex-wrap: wrap;
 }
 
@@ -903,7 +917,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 20px 0;
 }
 
-.square_list > ul > li::first-letter{
+.square_list > ul > li .first-letter{
 	background-color: #d3959b;
 	padding: 12px 14px;
 	color: #ffffff;
@@ -994,48 +1008,37 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 /* --- 3.4. Interior Area Four --- */
 .interior_area_four{
 	position: relative;
-	width: 100%;
-	min-height: 450px;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-/* --- 3.5. Interior Area Five --- */
-.interior_area_five{
-	position: relative;
 	z-index: 999;
-	max-width: 1000px;
-	margin: -350px auto 9em;
+	max-width: 1200px;
+	margin:-60px auto 9em;
 	padding: 0 25px;
 }
 
-.interior_group_five{
+.interior_group_four{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	margin-top: 40px;
-	background-color: #111111;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
 }
 
 .num_col{
 	position: relative;
 	flex: 25%;
 	width: 25%;
+	padding: 0 25px;
 }
 
 .num_box{
-	max-width: 250px;
+	max-width: 300px;
 	margin: 0 auto;
 	text-align: center;
-	padding: 25px 15px 30px;
-	border-right: dotted 1px #d3959b;
-	position: relative;
 }
 
 .list_num{
-	position: relative;
+	width: 70px;
+	height: 70px;
+	margin: 20px auto 0;
+	background-color: #d3959b;
+	border-radius: 50%;
 }
 
 .fourth_border{
@@ -1044,14 +1047,19 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .list_num h4{
 	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 70px;
-	font-weight: 800;
-	display: inline-block;
+	font-weight: 600;
+	font-size: 22px;
+	display: block;
 	text-align: center;
-	color: #d3959b;
-	line-height: 1.2em;
-	text-transform: uppercase;
-	margin: 0;
+	color: #ffffff;
+	line-height: 1.4em;
+}
+
+.num_center{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .mid_info h3{
@@ -1060,38 +1068,58 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-weight: 600;
 	display: block;
 	text-align: center;
-	color: #ffffff;
+	color: #111111;
 	letter-spacing: 1px;
 	line-height: 1.4em;
-	margin-top: 0;
+	margin-bottom: 0;
 }
 
-.mid_info p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: normal;
+.interior_area_four .slick-dots {
+	position: relative;
+	z-index: 999999;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	justify-content: center;
+	margin: 0;
+	padding: 1rem 0;
+	list-style-type: none;
+}
+
+.interior_area_four .slick-dots button{
 	display: block;
-	color: #d2d2d2;
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.5em;
-	padding: 10px 0;
+	width: 1.3rem;
+	height: 1.3rem;
+	padding: 0;		
+	border: solid 1px #6f6f6f;
+	border-radius: 50%;
+	background-color: transparent;
+	text-indent: -9999px;
 }
 
-.num_crumb{
-	width: 50px;
-	height: 1px;
-	margin: auto;
-	border-bottom: solid 2px #d3959b;
+.interior_area_four li.slick-active button{
+	background-color: #d3959b;
 }
 
-/* --- 3.6. Interior Area Six --- */
-.interior_area_six{
+.interior_area_four .slick-dots button:hover{
+	background-color: #d3959b;
+}
+
+.interior_area_four .slick-dots li{
+	margin: 22px 4px 0 4px;
+}
+
+.interior_area_four .slick-list{
+	overflow: visible;
+}
+
+/* --- 3.5. Interior Area Five --- */
+.interior_area_five{
 	width: 100%;
 	margin: 0 0 9em;
 }
 
-.interior_group_six{
+.interior_group_five{
 	max-width: 1280px;
 	width: 100%;
 	display: flex; 
@@ -1120,7 +1148,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .slidenav{
 	flex: 16.66%;
 	width: 16.66%;
-	margin-top: 130px;
+	margin-top: 160px;
 }
 
 .area_head h2{
@@ -1176,40 +1204,125 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: block;
 }
 
-.prev_slide,
-.next_slide{
-	font-size: 50px;
-	font-weight: 700;
+.prev_slide .fi,
+.next_slide .fi{
+	font-size: 38px;
 	transition: 0.6s ease;
-	width: auto;
+	max-width: 160px;
 	display: inline-block;
 	overflow: hidden;
 	color: #d3959b;
 	cursor: pointer;
 }
 
-.prev_slide{
+.prev_slide .fi{
 	margin-right: 15px;
 }
 
-.next_slide:hover,
-.prev_slide:hover{
+.next_slide .fi:hover,
+.prev_slide .fi:hover{
 	color: #111111;
+}
+
+/* --- 3.6. Interior Area Six --- */
+.interior_area_six{
+	position: relative;
+	min-height: 500px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 5em 0;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	margin-bottom: 9em;
+}
+
+.interior_group_six{
+	max-width: 1100px;
+	margin: 0 auto;
+	padding: 0 15px;
+}
+
+.video-play-button {
+	position: absolute;
+	z-index: 0;
+	left: 50%;
+	top: 50%;
+	z-index: 999;
+	transform: translateX(-50%) translateY(-50%);
+	box-sizing: content-box;
+	display: block;
+	width: 28px;
+	height: 42px;
+	border-radius: 50%;
+	padding: 28px 16px 12px 32px;
+	margin-top: 50px;
+}
+
+.video-play-button:before {
+	content: "";
+	position: absolute;
+	z-index: 0;
+	left: 50%;
+	top: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	display: block;
+	width: 80px;
+	height: 80px;
+	background: transparent;
+	border: solid 2px #111111;
+	border-radius: 50%;
+	animation: pulse-border 1500ms ease-out infinite;
+}
+
+.video-play-button:after {
+	content: "";
+	position: absolute;
+	z-index: 1;
+	left: 50%;
+	top: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	display: block;
+	width: 80px;
+	height: 80px;
+	background: transparent;
+	border: solid 2px #111111;
+	border-radius: 50%;
+	transition: all 200ms;
+}
+
+.video-play-button span {
+	display: block;
+	position: relative;
+	z-index: 3;
+	width: 0;
+	height: 0;
+	border-left: 18px solid #111111;
+	border-top: 12px solid transparent;
+	border-bottom: 12px solid transparent;
+}
+
+@keyframes pulse-border {
+  0% {
+    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
+    opacity: 0;
+  }
 }
 
 /* --- 3.7. Interior Area Seven --- */
 .interior_area_seven{
-	width: 100%;
-	position: relative;
-	min-height: 450px;
-	background-color: #111111;
-	padding: 5em 25px;
-	margin-bottom: 9em;
+	max-width: 1280px;
+	margin: 0 auto 9em;
+	padding: 0 25px;
 }
 
 .interior_group_seven{
-	max-width: 1280px;
-	margin: 0 auto;
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -1258,7 +1371,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 40px;
 	font-weight: 800;
 	display: block;
-	color: #ffffff;
+	color: #111111;
 	text-align: left;
 	letter-spacing: 1px;
 	line-height: 1.2em;
@@ -1270,7 +1383,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-weight: normal;
 	padding-top: 15px;
 	display: block;
-	color: #d2d2d2;
+	color: #696969;
 	letter-spacing: 1px;
 	text-align: left;
 	line-height: 1.5em;
@@ -1286,7 +1399,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 640px;
 	padding: 20px;
 	text-align: center;
-	background-color: #ffffff;
+	background-color: #f6f6f6;
 	border-left: solid 4px #d3959b;
 	margin-bottom: 65px;
 }
@@ -1301,7 +1414,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 16px;
 	font-weight: 600;
 	display: block;
-	color: #ffffff;
+	color: #111111;
 	letter-spacing: 1px;
 	text-align: left;
 	line-height: 1.4em;
@@ -1350,7 +1463,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	position: relative;
 }
 
-.slick-dots {
+.interior_area_seven .slick-dots {
 	position: absolute;
 	z-index: 5;
 	top: -65px;
@@ -1362,51 +1475,27 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	list-style-type: none;
 }
 
-.slick-dots button{
+.interior_area_seven .slick-dots button{
 	display: block;
 	width: 1.3rem;
 	height: 1.3rem;
 	padding: 0;		
-	border: solid 1px #ffffff;
-	border-radius: 100%;
+	border: solid 1px #6f6f6f;
+	border-radius: 50%;
 	background-color: transparent;
 	text-indent: -9999px;
 }
 
-li.slick-active button{
+.interior_area_seven li.slick-active button{
 	background-color: #d3959b;
 }
 
-.slick-dots button:hover{
+.interior_area_seven .slick-dots button:hover{
 	background-color: #d3959b;
 }
 
-.slick-dots li{
+.interior_area_seven .slick-dots li{
 	margin: 0 4px 8px 4px;
-}
-
-.bg_col_button a{
-	background-color: #d3959b;
-	width: 150px;
-	margin: 30px 0 0;
-    color: #ffffff;
-    padding: 13px 14px;
-    text-decoration: none;
-	text-transform: uppercase;
-    display: block;
-    font-size: 13px;
-	font-weight: 600;
-	font-family: 'Raleway', Arial, sans-serif;
-    transition: 0.5s;
-	border: 1px solid #d3959b;
-	letter-spacing: 1px;
-	text-align: center;
-}
-
-.bg_col_button a:hover{
-	color: #111111;
-	background-color: #ffffff;
-	border-color: #ffffff;
 }
 
 /* --- 3.8. Interior Area Eight --- */
@@ -1881,21 +1970,6 @@ a.footer-logo img{
 		width: 50%;
 	}
 	
-	.num_col{
-		flex: 50%;
-		width: 50%;
-	}
-	
-	.interior_group_five{
-		max-width: 500px;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	
-	.second_border{
-		border-right: none;
-	}
-	
 	.square_col_left{
 		flex: 100%;
 		width: 100%;
@@ -1958,7 +2032,8 @@ a.footer-logo img{
 	.mid_box h2,
 	.square_box h2,
 	.area_head h2,
-	.review_box h2{
+	.review_box h2,
+	.bg_head{
 		font-size: 30px;
 	}
 	
@@ -1977,20 +2052,6 @@ a.footer-logo img{
 	.bg_col{
 		flex: 100%;
 		width: 100%;
-	}
-	
-	.num_col{
-		flex: 100%;
-		width: 100%;
-	}
-	
-	.interior_group_five{
-		max-width: 250px;
-	}
-	
-	.first_border,
-	.third_border{
-		border-right: none;
 	}
 	
 	.blog_col{
