--- a/gym-fitness.css
+++ b/gym-fitness.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    20/04/2024
+Last change:    05/06/2024
 Author:    creativemaze
 Primary use:    Gym-Fitness
 -------------------------------------------------------------------*/
@@ -97,13 +97,28 @@ ul{
 	font-weight: 700;
 	display: block;
 	color: #111111;
-	display: block;
 	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.2em;
 	max-width: 650px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.bg_head{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 40px;
+	font-weight: 700;
+	display: block;
+	color: #ffffff;
+	text-align: center;
+	letter-spacing: 1px;
+	line-height: 1.2em;
+	max-width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+	z-index: 999;
 }
 
 .gym_info{
@@ -605,6 +620,18 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 5px 0;
 }
 
+.num_box p{
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 15px;
+	font-weight: normal;
+	display: block;
+	color: #696969;
+	letter-spacing: 1px;
+	text-align: center;
+	line-height: 1.5em;
+	padding: 25px 0 0;
+}
+
 .list_num h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 110px;
@@ -616,6 +643,31 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	line-height: 1.2em;
 	text-transform: uppercase;
 	margin: 0;
+}
+
+.list_num{
+	width: 70px;
+	height: 70px;
+	margin: 20px auto 0;
+	background-color: #d31027;
+	border-radius: 50%;
+}
+
+.list_num h4{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-weight: 600;
+	font-size: 22px;
+	display: block;
+	text-align: center;
+	color: #ffffff;
+	line-height: 1.4em;
+}
+
+.num_center{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .cube_crumb{
@@ -691,19 +743,15 @@ li.slick-active button{
 
 /* --- 3.2. Gym Area Two --- */
 .gym_area_two{
-	min-height: 400px;
-	padding: 6em 25px;
-	background-color: #eeeeee;
-	margin-bottom: 9em;
+	max-width: 1200px;
+	margin: 0 auto 9em;
+	padding: 0 25px;
 }
 
 .gym_group_two{
-	max-width: 1200px;
-	margin: 0 auto;
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	padding-bottom: 25px;
 }
 
 .icon_col{
@@ -718,22 +766,21 @@ li.slick-active button{
 	text-align: center;
 	padding-top: 15px;
 	background-color: #ffffff;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
 }
 
 .icon_content{
 	width: 100%;
-	background-color: #ffffff;
-	padding: 0 0 20px;
-	text-align: center;
+	padding: 0 0 25px;
 	margin-top: -20px;
 }
 
-.icon_symbol span.icon-80{
-	font-size: 80px;
-	font-weight: 100;
+.icon_symbol .fi{
+	font-size: 52px;
 	color: #d31027;
 	display: inline-block;
 	text-align: center;
+	padding-top: 10px;
 }
 
 .icon_content h3{
@@ -756,7 +803,7 @@ li.slick-active button{
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.5em;
-	padding: 8px 12px;
+	padding: 8px 12px 4px;
 }
 
 .icon_button a{
@@ -938,17 +985,17 @@ li.slick-active button{
 	letter-spacing: 1px;
 	line-height: 1.4em;
 	text-align: left;
-	padding: 6px 0;
+	padding: 7px 0;
 }
 
 .info_list > ul > li::before{
-	content: "\e5cc";
-	font-family: 'Material Symbols Outlined';
-	font-weight: 300;
-	font-size: 30px;
+	font-family: 'uicons-regular-straight';
+	content: "\fd5e";
+	font-weight: 100;
+	font-size: 26px;
 	position: relative;
-	top: 10px;
-	padding-right: 3px;
+	top: 8px;
+	padding-right: 8px;
 	color: #d31027;
 }
 
@@ -993,31 +1040,31 @@ li.slick-active button{
 	bottom: 0;
 	z-index: 999;
 	background-color: #ffffff;
-	width: 250px;
+	width: 230px;
 	text-align: center;
 	height: 70px;
 	left: 0;
 	z-index: 9999;
 }
 
-.prev_nav,
-.next_nav{
-	font-size: 50px;
-	font-weight: 700;
+.prev_nav .fi,
+.next_nav .fi{
+	font-size: 38px;
 	transition: 0.6s ease;
 	width: auto;
 	display: inline-block;
 	overflow: hidden;
 	color: #d31027;
 	cursor: pointer;
+	margin-top: 18px;
 }
 
-.prev_nav{
-	margin-right: 25px;
+.prev_nav .fi{
+	margin-right: 20px;
 }
 
-.next_nav:hover,
-.prev_nav:hover{
+.next_nav .fi:hover,
+.prev_nav .fi:hover{
 	color: #111111;
 }
 
@@ -1185,9 +1232,8 @@ li.slick-active button{
 	width: 80%;
 }
 
-.square_icon span.icon-65{
-	font-size: 65px;
-	font-weight: 100;
+.square_icon .fi{
+	font-size: 48px;
 	color: #d31027;
 	display: inline-block;
 	text-align: left;
@@ -1432,15 +1478,15 @@ li.slick-active button{
 	color: #111111;
 	letter-spacing: 1px;
 	text-align: left;
+	padding: 7px 0;
 }
 
 .feature_list > ul > li::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e5ca";
-	font-weight: 300;
-	font-size: 30px;
+	font-family: 'uicons-regular-straight';
+	content: "\fb2b";
+	font-size: 20px;
 	position: relative;
-	top: 11px;
+	top: 7px;
 	padding-right: 8px;
 	color: #d31027;
 }
@@ -2212,10 +2258,6 @@ a.footer-logo img{
 		margin-left: 0;
 	}
 	
-	.feature_bg .feature_heading{
-		left: -250%;
-	}
-	
 	.video-play-button{
 		top: 100%;
 		transform: translateY(-100%);
@@ -2261,12 +2303,20 @@ a.footer-logo img{
 	.info_col{
 		min-height: 550px;
 	}
+	
+	.feature_bg .feature_heading{
+		left: -250%;
+	}
 }
 
 @media only screen and (max-width: 375px){
 	.feature_col{
 		padding-left: 0;
 		padding-right: 0;
+	}
+	
+	.feature_bg .feature_heading{
+		left: -200%;
 	}
 }
 
@@ -2281,5 +2331,9 @@ a.footer-logo img{
 	
 	.feature_content h3{
 		font-size: 10px;
+	}
+	
+	.feature_bg .feature_heading{
+		left: -225%;
 	}
 }
