--- a/travel.css
+++ b/travel.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    28/04/2024
+Last change:    07/06/2024
 Author:    creativemaze
 Primary use:    Travel
 -------------------------------------------------------------------*/
@@ -518,19 +518,11 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex-wrap: wrap;
 }
 
-.bg_slider{
-	max-width: 1280px;
-	margin: 0 auto;
-	width: 100%;
-	display: block;
-}
-
 .travel_col{
 	flex: 100%;
 	max-width: calc(100% - 60px);
 	background-color: #ffffff;
 	padding: 25px 20px 0;
-	
 }
  
 .bottom_area{
@@ -555,7 +547,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex: 41.66%;
 	width: 41.66%;
 	padding: 0 10px;
-	margin-top: 20px;
+	margin-top: 15px;
 }
 
 .area_head h2{
@@ -903,12 +895,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	left: 30px;
 }
 
-.tour_icon span.icon-60{
-	font-size: 60px;
-	font-weight: 100;
+.tour_icon .fi{
+	font-size: 48px;
 	color: #00cdac;
-	padding: 12px;
-	border-radius: 50%;
 	display: inline-block;
 	text-align: center;
 }
@@ -963,22 +952,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .tour_title a:hover{
 	background-color: #ffffff;
 	color: #111111;
-}
-
-.tour_col:not(:active) .tour_icon{
-	opacity: 0;
-}
-
-.tour_col.active .tour_icon{
-	opacity: 1;
-}
-
-.tour_col:not(:active) .tour_content{
-	opacity: 0;
-}
-
-.tour_col.active .tour_content{
-	opacity: 1;
 }
 
 /* --- 3.4. Travel Area Four --- */
@@ -1129,25 +1102,25 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background-color: #ffffff;
 }
 
-.box_checkbox::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e5ca";
-	font-weight: 400;
-	font-size: 25px;
+.box_check .fi::before{
+	font-family: 'uicons-regular-straight';
+	content: "\fb2b";
+	font-weight: 200;
+	font-size: 22px;
 	border: solid 1px #ffffff;
 	border-radius: 50%;
-	padding: 4px 8px;
+	padding: 10px;
 	color: #ffffff;
 }
 
-.last_checkbox::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e5ca";
-	font-weight: 400;
-	font-size: 25px;
+.box_check .fi.last_check::before{
+	font-family: 'uicons-regular-straight';
+	content: "\fb2b";
+	font-weight: 200;
+	font-size: 22px;
 	border: solid 1px #111111;
 	border-radius: 50%;
-	padding: 4px 8px;
+	padding: 10px;
 	color: #111111;
 }
 
@@ -1167,16 +1140,17 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #111111;
 	letter-spacing: 1px;
 	text-align: left;
+	padding: 6px 0;
 }
 
 .square_list > ul > li::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e941";
-	font-weight: 300;
-	font-size: 30px;
+	font-family: 'uicons-thin-straight';
+	content: "\fc0a";
+	font-weight: 100;
+	font-size: 32px;
 	position: relative;
 	top: 10px;
-	padding-right: 8px;
+	padding-right: 10px;
 	color: #00cdac;
 }
 
@@ -1265,7 +1239,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 10px;
 	width: calc(100% - 10%);
 	min-height: 100px;
-	margin-top: 80px;
+	margin-top: 90px;
 }
 
 .feature_area{
@@ -1298,12 +1272,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 80%;
 }
 
-.feature_check .material-symbols-outlined.icon-45{
-	font-size: 45px;
-	font-weight: 300;
+.feature_check .fi{
+	font-size: 44px;
 	color: #00cdac;
+	display: inline-block;
 	text-align: left;
-	padding-top: 18px;
+	padding-top: 26px;
 }
 
 .feature_content h3{
@@ -1663,8 +1637,8 @@ a.blog_btn:hover{
 	text-transform: uppercase;
 }
 
-.client_icon span.icon-25{
-	font-size: 25px;
+.client_icon .fi{
+	font-size: 22px;
 	font-weight: 300;
 	color: #00cdac;
 	display: inline-block;
@@ -2096,11 +2070,7 @@ a.footer-logo img{
 	}
 	
 	.box_check{
-		margin-top: -1px;
-	}
-	
-	.box_content h3{
-		font-size: 12px;
+		margin-top: 7px;
 	}
 	
 	.box_content h3{
@@ -2138,25 +2108,16 @@ a.footer-logo img{
 	}
 }
 
-@media only screen and (max-width: 385px){
-	.box_checkbox::before{
-		font-size: 22px;
-		padding: 4px 6px;
-	}
-	
-	.box_check{
-		margin-top: 2px;
+@media only screen and (max-width: 360px){
+	.box_check .fi::before,
+	.box_check .fi.last_checkbox::before{
+		font-size: 18px;
 	}
 }
 
 @media only screen and (max-width: 320px){
 	.header-title__main{
 		font-size: 40px;
-	}
-	
-	.icon_col{
-		padding-left: 0;
-		padding-right: 0;
 	}
 	
 	.dark_top_box,
